--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
 	<h1>GIT First Trying</h1>
 	<p>нова зміна у файлі index.html</p>
+	<p>наступна зміна у файлі index.html</p>
 </body>
 </html>
