--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<h1>GIT First Trying</h1>
 	<p>нова зміна у файлі index.html</p>
 	<p>наступна зміна у файлі index.html</p>
+	<p>третя зміна у файлі index.html</p>
 </body>
 </html>
