color red as first commit

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<<link rel="stylesheet" href="style.css">
+	<title>Lesson 4 loftblog</title>
+	
 </head>
 <body>
-	<h1>GIT First Trying</h1>
+	<h1>Lesson 4 about branch merge</h1>
 	<p>нова зміна у файлі index.html</p>
 	<p>наступна зміна у файлі index.html</p>
 	<p>третя зміна у файлі index.html</p>
+	<<p>зміна для 4-го уроку</p>
 </body>
 </html>
