--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
 </head>
 <body>
-	<h1>Lesson 4 about branch merge</h1>
+	<h1>Lesson 4 about master branch after merge</h1>
 	<p>нова зміна у файлі index.html</p>
 	<p>наступна зміна у файлі index.html</p>
 	<p>третя зміна у файлі index.html</p>
